30_sort_lines/grade.txt
Grading at Wed Dec 25 00:19:31 UTC 2019
Attempting to compile sortLines.c
sortLines.c: In function ‘main’:
sortLines.c:46:10: error: statement with no effect [-Werror=unused-value]
   } else (argc > 1)
          ^
sortLines.c:47:3: error: expected ‘;’ before ‘{’ token
   {
   ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
